tests/fixtures/invalid/duplicate-entity-names.bprint
{
  "schemaVersion": "v1",
  "namespace": "acme.orders",
  "description": "Order with duplicate field names",
  "entity": {
    "primaryKey": { "partitionKey": "orderId" },
    "fields": [
      { "name": "orderId", "type": "string", "required": true },
      { "name": "orderId", "type": "string", "required": true }
    ]
  }
}
